--- a/Frugl/Frugl/Views/Calendar/Calendar.storyboard
+++ b/Frugl/Frugl/Views/Calendar/Calendar.storyboard
@@ -28,11 +28,17 @@
                                 <rect key="frame" x="246.33333333333337" y="64" width="146.66666666666663" height="34.333333333333343"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.forward.circle.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="nextMonthButtonTapped:" destination="TuM-FB-eRP" eventType="touchUpInside" id="dUn-oa-ewA"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxc-LO-gNg">
                                 <rect key="frame" x="0.0" y="64" width="147" height="34.333333333333343"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.forward.circle.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="previousMonthButtonTapped:" destination="TuM-FB-eRP" eventType="touchUpInside" id="Fxn-f5-Rph"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="atL-ea-Okf">
                                 <rect key="frame" x="0.0" y="108" width="393" height="50"/>
@@ -85,24 +91,24 @@
                                 </constraints>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fWM-tF-c5M">
-                                <rect key="frame" x="0.0" y="158" width="393" height="219"/>
+                                <rect key="frame" x="0.0" y="158.00000000000003" width="393" height="271.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="j1n-0O-Fg2">
-                                    <size key="itemSize" width="50" height="50"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.5" minimumInteritemSpacing="0.5" id="j1n-0O-Fg2">
+                                    <size key="itemSize" width="50" height="40"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Xv0-sB-ple" customClass="CalendarCollectionViewCell" customModule="Frugl" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="calCell" id="Xv0-sB-ple" customClass="CalendarCollectionViewCell" customModule="Frugl" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cdc-P2-dfd">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="40"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mIP-Ps-1TY">
-                                                    <rect key="frame" x="20.333333333333332" y="0.66666666666666607" width="9.6666666666666679" height="24"/>
+                                                    <rect key="frame" x="20.333333333333332" y="-2" width="9.6666666666666679" height="24"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -120,7 +126,7 @@
                                 </cells>
                             </collectionView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="191" translatesAutoresizingMaskIntoConstraints="NO" id="np7-YK-9Gv">
-                                <rect key="frame" x="0.0" y="377" width="393" height="20.333333333333314"/>
+                                <rect key="frame" x="0.0" y="459.66666666666669" width="393" height="20.333333333333314"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="(Budget)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRC-YO-PEB">
                                         <rect key="frame" x="0.0" y="0.0" width="116.66666666666667" height="20.333333333333332"/>
@@ -137,8 +143,11 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="F7S-eP-n8R">
-                                <rect key="frame" x="8" y="405.33333333333326" width="377" height="394.66666666666674"/>
+                                <rect key="frame" x="8" y="500" width="377" height="300"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="QSk-dM-F36"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="calendarCell" id="mgW-Ch-rIv" customClass="CalendarTableViewCell" customModule="Frugl" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="377" height="43.666667938232422"/>
@@ -163,21 +172,21 @@
                             <constraint firstItem="hex-az-6sa" firstAttribute="trailing" secondItem="np7-YK-9Gv" secondAttribute="trailing" id="E8d-Lv-IPx"/>
                             <constraint firstItem="hex-az-6sa" firstAttribute="bottom" secondItem="F7S-eP-n8R" secondAttribute="bottom" constant="18" id="Fsd-PT-W60"/>
                             <constraint firstItem="hex-az-6sa" firstAttribute="trailing" secondItem="fWM-tF-c5M" secondAttribute="trailing" id="MIB-um-ccg"/>
+                            <constraint firstItem="np7-YK-9Gv" firstAttribute="centerX" secondItem="hex-az-6sa" secondAttribute="centerX" id="Sgy-y9-d88"/>
                             <constraint firstItem="oM5-cU-WeP" firstAttribute="centerY" secondItem="wMY-vU-kHE" secondAttribute="centerY" id="Sqq-f0-RI5"/>
                             <constraint firstItem="hxc-LO-gNg" firstAttribute="centerY" secondItem="wMY-vU-kHE" secondAttribute="centerY" id="Tpq-SE-JMV"/>
                             <constraint firstItem="hex-az-6sa" firstAttribute="leading" secondItem="hxc-LO-gNg" secondAttribute="leading" id="Wib-uX-5Ve"/>
                             <constraint firstItem="np7-YK-9Gv" firstAttribute="leading" secondItem="hex-az-6sa" secondAttribute="leading" id="Y3b-hi-7LC"/>
                             <constraint firstItem="hxc-LO-gNg" firstAttribute="height" secondItem="wMY-vU-kHE" secondAttribute="height" multiplier="1.43056" id="YTD-Zs-ujQ"/>
                             <constraint firstItem="fWM-tF-c5M" firstAttribute="leading" secondItem="hex-az-6sa" secondAttribute="leading" id="eDA-bA-5sW"/>
-                            <constraint firstItem="np7-YK-9Gv" firstAttribute="top" secondItem="atL-ea-Okf" secondAttribute="top" constant="269" id="jDS-PX-QMJ"/>
                             <constraint firstItem="wMY-vU-kHE" firstAttribute="centerX" secondItem="hex-az-6sa" secondAttribute="centerX" id="jo7-Sq-mAj"/>
-                            <constraint firstItem="np7-YK-9Gv" firstAttribute="top" secondItem="fWM-tF-c5M" secondAttribute="bottom" id="noz-h8-9YV"/>
                             <constraint firstItem="atL-ea-Okf" firstAttribute="top" secondItem="wMY-vU-kHE" secondAttribute="bottom" constant="15" id="oeL-bc-I5b"/>
-                            <constraint firstItem="F7S-eP-n8R" firstAttribute="top" secondItem="np7-YK-9Gv" secondAttribute="bottom" constant="8" id="t2Y-my-tGw"/>
                             <constraint firstItem="atL-ea-Okf" firstAttribute="leading" secondItem="hex-az-6sa" secondAttribute="leading" id="vS2-Rk-91Q"/>
+                            <constraint firstItem="np7-YK-9Gv" firstAttribute="top" secondItem="fWM-tF-c5M" secondAttribute="bottom" constant="30" id="vrb-bX-uKU"/>
                             <constraint firstItem="hex-az-6sa" firstAttribute="trailing" secondItem="atL-ea-Okf" secondAttribute="trailing" id="xpX-35-vw2"/>
                             <constraint firstItem="fWM-tF-c5M" firstAttribute="top" secondItem="atL-ea-Okf" secondAttribute="bottom" id="yBe-Ij-4KD"/>
                             <constraint firstItem="F7S-eP-n8R" firstAttribute="leading" secondItem="hex-az-6sa" secondAttribute="leading" constant="8" id="yo8-en-Szg"/>
+                            <constraint firstItem="F7S-eP-n8R" firstAttribute="top" secondItem="np7-YK-9Gv" secondAttribute="bottom" constant="20" id="zY2-Le-5Fh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="l2m-TW-3aC">
@@ -188,6 +197,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="calendarCollectionView" destination="fWM-tF-c5M" id="yMl-cz-cf4"/>
+                        <outlet property="monthLabel" destination="wMY-vU-kHE" id="lTf-V4-aBy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iKx-rF-gnS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
